--- a/css/zengjf_css.css
+++ b/css/zengjf_css.css
@@ -7,3 +7,9 @@
   padding-left: 20px;
   border-left: 1px solid #ddd;
  }
+
+ .horizontal_scrollbar {
+  white-space: pre;
+  word-wrap: normal;
+  overflow-x: auto;
+ }
