--- a/css/zengjf_css.css
+++ b/css/zengjf_css.css
@@ -1,15 +1,20 @@
-.show_content_left_div {
-  padding-right: 20px;
-  border-right: 1px solid #ddd;
- }
-
-.show_content_right_div {
+.show_content_render_div {
   padding-left: 20px;
+  padding-right: 20px;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
   border-left: 1px solid #ddd;
  }
 
- .horizontal_scrollbar {
-  white-space: pre;
-  word-wrap: normal;
-  overflow-x: auto;
+ .code_vertical_scrollbar {
+  max-height: 340px;
+ }
+
+ .code_horizontal_scrollbar {
+  overflow: auto; 
+  -ms-word-wrap: normal; 
+  word-wrap: normal; 
+  overflow-wrap: normal; 
+  white-space: pre; 
  }
