--- a/templates/nav.tmpl
+++ b/templates/nav.tmpl
@@ -1,86 +1,19 @@
 <ul class="nav navbar-nav">
 
-  <!-- SVG -->
+  {{#each parts}}
+  <!-- {{this}} -->
   <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">SVG<strong class="caret"></strong></a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{this}}<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
-      {{#each SVG.pages}}
+      {{#getObjectValue ../ this}}
+      {{#each pages}}
       <li>
         <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
       </li>
       {{/each}}
+      {{/getObjectValue}}
     </ul>
   </li>
+  {{/each}}
 
-  <!-- Canvas -->
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Canvas<strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
-      {{#each Canvas.pages}}
-      <li>
-        <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
-      </li>
-      {{/each}}
-    </ul>
-  </li>
-
-  <!-- Three_js -->
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Three_js<strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
-      {{#each Three_js.pages}}
-      <li>
-        <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
-      </li>
-      {{/each}}
-    </ul>
-  </li>
-
-  <!-- Show_Time -->
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Show_Time<strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
-      {{#each Show_Time.pages}}
-      <li>
-        <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
-      </li>
-      {{/each}}
-    </ul>
-  </li>
-
-  <!-- My_Girl -->
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">My_Girl<strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
-      {{#each My_Girl.pages}}
-      <li>
-        <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
-      </li>
-      {{/each}}
-    </ul>
-  </li>
-
-  <!-- Informations -->
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Informations<strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
-      {{#each Informations.pages}}
-      <li>
-        <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
-      </li>
-      {{/each}}
-    </ul>
-  </li>
-
-  <!-- About -->
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
-      {{#each About.pages}}
-      <li>
-        <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
-      </li>
-      {{/each}}
-    </ul>
-  </li>
 </ul>
