--- a/css/zengjf/zengjf_css.css
+++ b/css/zengjf/zengjf_css.css
@@ -8,7 +8,9 @@
  }
 
  .code_vertical_scrollbar {
-  max-height: 340px;
+  max-height: 300px;
+  padding: 0px;
+  margin-top: 10px;
  }
 
  .code_horizontal_scrollbar {
