--- a/templates/svg/svg_frame.html
+++ b/templates/svg/svg_frame.html
@@ -1,17 +1,15 @@
-<div id="code_content_container" class="row clearfix">
-  <div class="col-md-4 column">
-    <div style="width:100%;height:100%;">
-      <h4 class="text-info text-center">
-        HTML
-      </h4>
-      <pre class="code_vertical_scrollbar">
-        <code id="show-content_code_html" class="html code_horizontal_scrollbar">
-        </code>
-      </pre>
-    </div>
+<div class="row clearfix">
+  <div class="code_content_container col-md-4 column">
+    <h4 class="text-info text-center">
+      HTML
+    </h4>
+    <pre class="code_vertical_scrollbar">
+      <code id="show-content_code_html" class="html code_horizontal_scrollbar">
+      </code>
+    </pre>
   </div>
-  <div class="col-md-4 column">
-    <h4 class="text-center">
+  <div class="code_content_container col-md-4 column">
+    <h4 class="text-info text-center">
       Javascript
     </h4>
     <pre class="code_vertical_scrollbar">
@@ -19,8 +17,8 @@
       </code>
     </pre>
   </div>
-  <div class="col-md-4 column">
-    <h4 class="text-center">
+  <div class="code_content_container col-md-4 column">
+    <h4 class="text-info text-center">
       CSS
     </h4>
     <pre class="code_vertical_scrollbar">
@@ -29,7 +27,7 @@
     </pre>
   </div>
 </div>
-<div class="row clearfix text-center">
+<div class="row clearfix" align="center">
   <div id="show-content_render" class="show_content_render_div col-md-12 column">
   </div>
 </div>
