fix footer position.

--- a/css/zengjf/zengjf_css.css
+++ b/css/zengjf/zengjf_css.css
@@ -20,3 +20,9 @@
   overflow-wrap: normal; 
   white-space: pre; 
  }
+
+ /* 动态为footer添加类fixed-bottom */
+.fixed-bottom {
+  position: fixed;
+  bottom: 0;width:100%;
+}
