--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
       {{#getObjectValue ../ this}}
       {{#each pages}}
       <li>
-        <a href="javascript:void(0);" onclick="{{getFunctionName .. this}}(this)">{{@key}}</a>
+        <a href="javascript:void(0);" onclick="nav_click_search_content(this)">{{@key}}</a>
       </li>
       {{/each}}
       {{/getObjectValue}}
