highlight javacript css code.

--- a/templates/SVG/svg_frame.html
+++ b/templates/SVG/svg_frame.html
@@ -13,7 +13,7 @@
       Javascript
     </h4>
     <pre class="code_vertical_scrollbar">
-      <code id="show-content_code_js" class="html code_horizontal_scrollbar">
+      <code id="show-content_code_js" class="javascript code_horizontal_scrollbar">
       </code>
     </pre>
   </div>
@@ -22,7 +22,7 @@
       CSS
     </h4>
     <pre class="code_vertical_scrollbar">
-      <code id="show-content_code_css" class="html code_horizontal_scrollbar">
+      <code id="show-content_code_css" class="css code_horizontal_scrollbar">
       </code>
     </pre>
   </div>
