--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,11 @@
 <ul class="nav navbar-nav">
 
+  <!--
+  <li>
+    <a href="javascript:void(0);" onclick="show_home_page();">Home Page</a>
+  </li>
+  -->
+
   {{#each parts}}
   <!-- {{this}} -->
   <li class="dropdown">
@@ -21,7 +27,7 @@
       <li class="divider">
       {{/ifCond}}
 
-	  </li>
+    </li>
       {{/each}}
       {{/getObjectValue}}
     </ul>
