use underscore template replace handerbar.

--- a/templates/About/about_frame.html
+++ b/templates/About/about_frame.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="css/github-markdown.css">
 <div class="row clearfix">
   <div class="text-center">
-    <h3> {{title}} <h3>
+    <h3> <%= title %> <h3>
   </div>
   <article class="markdown-body" id="markdown-body_content">
   </article>
