--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,32 +6,36 @@
   </li>
   -->
 
-  {{#each parts}}
-  <!-- {{this}} -->
+  <% _.each(nav.maps, (item_e, key_e, list_e) => { %>
+  <!-- <%= _.keys(item_e)[0] %> -->
   <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{this}}<strong class="caret"></strong></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= _.keys(item_e)[0] %><strong class="caret"></strong></a>
     <ul class="dropdown-menu">
-      {{#getObjectValue ../ this}}
-      {{#each pages}}
-      {{#ifCond type 'linker'}}
-      <li>
-        <a href="{{url}}">{{@key}}</a>
-      {{/ifCond}}
+      <% _.each(nav[nav.maps[key_e][_.keys(item_e)[0]]].pages, (item_i, key_i, list_i) => { %>
 
-      {{#ifCond type 'html'}}
-      <li>
-        <a href="javascript:void(0);" onclick="nav_click_search_content(this)">{{@key}}</a>
-      {{/ifCond}}
+      <% if (item_i.type == "linker") { %>
 
-      {{#ifCond type 'divider'}}
+      <li>
+        <a href="<%= item_i.url%>"><%= key_i %></a>
+      <% } else if (item_i.type == "html") { %>
+
+      <li>
+        <a href="javascript:void(0);" onclick="nav_click_search_content(this)"><%= key_i %></a>
+
+      <% } else if (item_i.type == "divider") { %>
       <li class="divider">
-      {{/ifCond}}
+      <% }%>
 
-    </li>
-      {{/each}}
-      {{/getObjectValue}}
+      </li>
+      <%
+      });
+      %>
+
     </ul>
   </li>
-  {{/each}}
+
+  <%
+  });
+  %>
 
 </ul>
