--- a/templates/nav.html
+++ b/templates/nav.html
@@ -39,3 +39,17 @@
   %>
 
 </ul>
+
+<ul class="nav navbar-nav navbar-right">
+  <li class="dropdown">
+     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language<strong class="caret"></strong></a>
+    <ul class="dropdown-menu">
+      <li>
+         <a href="#">en</a>
+      </li>
+      <li>
+         <a href="#">zh</a>
+      </li>
+    </ul>
+  </li>
+</ul>
