--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,7 +9,7 @@
   <% _.each(nav.maps, (item_e, key_e, list_e) => { %>
   <!-- <%= _.keys(item_e)[0] %> -->
   <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= _.keys(item_e)[0] %><strong class="caret"></strong></a>
+  <a href="#" class="dropdown-toggle lang_<%= _.values(item_e)[0] %>" data-toggle="dropdown"><%= _.keys(item_e)[0] %><strong class="caret"></strong></a>
     <ul class="dropdown-menu">
       <% _.each(nav[nav.maps[key_e][_.keys(item_e)[0]]].pages, (item_i, key_i, list_i) => { %>
 
