--- a/templates/nav.html
+++ b/templates/nav.html
@@ -42,13 +42,13 @@
 
 <ul class="nav navbar-nav navbar-right">
   <li class="dropdown">
-     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language<strong class="caret"></strong></a>
+     <a href="#" class="dropdown-toggle lang_language" data-toggle="dropdown">Language<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
       <li>
-         <a href="#">en</a>
+         <a href="javascript:void(0);" onclick="nav_language_change(this)">en_GB</a>
       </li>
       <li>
-         <a href="#">zh</a>
+         <a href="javascript:void(0);" onclick="nav_language_change(this)">zh_CN</a>
       </li>
     </ul>
   </li>
