--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,21 +2,46 @@
 
   <!--
   <li>
-    <a href="javascript:void(0);" onclick="show_home_page();">Home Page</a>
+    <a href="javascript:void(0);" onclick="show_home_page();">Home Page</a>  //void 是 JavaScript 中非常重要的关键字，该操作符指定要计算一个表达式但是不返回值,<a href="javascript:void(0)">单击此处什么也不会发生</a>
   </li>
   -->
 
+  <!-- 调用格式,_.each(list, iterator_fun, [context]) 
+  list 是一个数据列表，context保存的是list列表中的一个元素，iterator_fun是一个回调函数
+  ，遍历列表，回调iterator_fun函数
+  -->
+  
+  <!--本页面函数详解 ：https://book.2cto.com/201406/43956
+ 如果参数list列表是一个JavaScript对象，iterator迭代器遍历时的参数则变为（value，key，list） -->
   <% _.each(nav.maps, (item_e, key_e, list_e) => { %>
-  <!-- <%= _.keys(item_e)[0] %> -->
+  <!-- <%= _.keys(item_e)[0] %> 
+  该函数的功能是：检索并返回对象的属性名称列表，返回格式为数组
+  -->
   <li class="dropdown">
   <a href="#" class="dropdown-toggle lang_<%= _.values(item_e)[0] %>" data-toggle="dropdown"><%= _.keys(item_e)[0] %><strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
+   <!-- 上面这一步循环创建nav导航栏标题 Demo_Analysis、Show_Time，About，Keep_Walk-->
+
+   <ul class="dropdown-menu">
+   <!-- 在向导栏下面创建菜单
+
+-->
+   
       <% _.each(nav[nav.maps[key_e][_.keys(item_e)[0]]].pages, (item_i, key_i, list_i) => { %>
+<!-- _.each(nav[nav.maps[key_e][_.keys(item_e)[0]]].pages 其本质就是 nav.xxx.pages 
+	item_i 是pages的value，key_i是pages的key，list_i是pages
 
+-->
+	  
       <% if (item_i.type == "linker") { %>
+<!-- 判断pages.key（指向的文件的类型）的类型，若是linker类型，就创建超链接菜单
+若是HTML类型，就创建点击事件，a href="javascript:void(0)的作用，就是禁止从本页面跳转出去
 
+
+-->
       <li>
         <a href="<%= item_i.url%>"><%= key_i %></a>
+	
+		
       <% } else if (item_i.type == "html") { %>
 
       <li>
@@ -40,7 +65,7 @@
 
 </ul>
 
-<ul class="nav navbar-nav navbar-right">
+<ul class="nav navbar-nav navbar-right"> <!--导行栏语言菜单按钮-->
   <li class="dropdown">
      <a href="#" class="dropdown-toggle lang_language" data-toggle="dropdown">Language<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
@@ -53,3 +78,4 @@
     </ul>
   </li>
 </ul>
+<!--导行栏菜单选项的功能是通过超链接或点击事件来完成的-->
